# martapi

./: compose.yml
inventory_service/: Dockerfile  db.py  inventory.proto  main.py  order.proto  order_pb2.py  pyproject.toml
notification_service/: Dockerfile  main.py  notification_pb2.py  pyproject.toml
order_service/: Dockerfile  db.py  main.py  notification.proto  order.proto  order_pb2.py  pyproject.toml
payment_service/: pyproject.toml
product_db_service/: Dockerfile  pyproject.toml
product_db_service/product_db_service/: db.py  main.py  product_pb2.py
product_db_service/product_db_service/utils/: addProduct.py
product_service/: Dockerfile  inventory_pb2.py  product.proto  product_pb2.py  pyproject.toml
product_service/product_service/: consumer.py  db.py  main.py
user_service/: db.py  main.py  pyproject.toml
